--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,2 @@
-<main class="form-signin w-100 m-auto mt-5">
-  <form [formGroup]="loginForm">
-    <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-    <div class="form-floating">
-      <input formControlName="usuario" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-      <label for="floatingInput">Usuario</label>
-    </div>
-    <div class="form-floating">
-      <input formControlName="contraseña" type="password" class="form-control" id="floatingPassword" placeholder="Password">
-      <label for="floatingPassword">Contraseña</label>
-    </div>
-
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
-  </form>
-</main>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
