--- a/src/app/pages/navbar/navbar.component.html
+++ b/src/app/pages/navbar/navbar.component.html
@@ -1,15 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="#">Super-gest</a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" routerLink="/home" routerLinkActive="router-link-active" >Home</a>
+          <a class="nav-link active" aria-current="page" routerLink="/home" routerLinkActive="router-link-active" >Empleados</a>
         </div>
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" routerLink="/crearEmpleado" routerLinkActive="router-link-active" >Crear empleado</a>
+          <a class="nav-link active" aria-current="page" routerLink="/producto" routerLinkActive="router-link-active" >Producto</a>
         </div>
       </div>
     </div>
